<resources>
    <string name="app_name">FinalProject</string>
    <string name="top_score">Top 100 Scores</string>
    <string name="previous_score_title">Previous Score:</string>
    <string name="user_score_title">Your Score:</string>
    <string name="user_score">NULL</string>
    <string name="upload_score">Upload Score</string>
    <string name="share_score">Share Score</string>
    <string name="home_screen">Home</string>
    <string name="play_again">Play Again</string>
    <string name="enter_username">Username:</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>