<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mario_background"
    tools:context=".ScoreboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/search_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/top_score"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/top_score_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/previous_score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/previous_score_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/user_score_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/user_score"
                android:textSize="72sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/enter_username"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Button
                    style="@style/scoreboard_button"
                    android:id="@+id/upload_score"
                    android:text="@string/upload_score"/>

                <Button
                    style="@style/scoreboard_button"
                    android:id="@+id/share_score"
                    android:text="@string/share_score"/>

                <Button
                    style="@style/scoreboard_button"
                    android:id="@+id/home_page"
                    android:text="@string/home_screen"/>

                <Button
                    style="@style/scoreboard_button"
                    android:id="@+id/play_again"
                    android:text="@string/play_again" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>